; ModuleID = '/home/carl/AnghaBench/kphp-kdb/common/extr_xz_dec.c_lzma_get_dist_state.c'
source_filename = "/home/carl/AnghaBench/kphp-kdb/common/extr_xz_dec.c_lzma_get_dist_state.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@DIST_STATES = common dso_local global i32 0, align 4
@MATCH_LEN_MIN = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (i64)* @lzma_get_dist_state to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @lzma_get_dist_state(i64 %0) #0 {
  %2 = alloca i64, align 8
  store i64 %0, i64* %2, align 8
  %3 = load i64, i64* %2, align 8
  %4 = load i32, i32* @DIST_STATES, align 4
  %5 = sext i32 %4 to i64
  %6 = load i64, i64* @MATCH_LEN_MIN, align 8
  %7 = add nsw i64 %5, %6
  %8 = icmp slt i64 %3, %7
  br i1 %8, label %9, label %13

9:                                                ; preds = %1
  %10 = load i64, i64* %2, align 8
  %11 = load i64, i64* @MATCH_LEN_MIN, align 8
  %12 = sub nsw i64 %10, %11
  br label %17

13:                                               ; preds = %1
  %14 = load i32, i32* @DIST_STATES, align 4
  %15 = sub nsw i32 %14, 1
  %16 = sext i32 %15 to i64
  br label %17

17:                                               ; preds = %13, %9
  %18 = phi i64 [ %12, %9 ], [ %16, %13 ]
  ret i64 %18
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
